# beadline

./: .gitignore  .gittattributes  Cargo.toml  README.md  analysis_options.yaml  devtools_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml  slang.yaml
android/app/: build.gradle.kts  proguard-rules.pro
crates/beadline-core/: Cargo.toml
crates/beadline-core/src/: database.rs  entity.rs  error.rs  hash.rs  lib.rs  model.rs  repository.rs  thumbnail_cache.rs
crates/beadline-core/src/entity/: song_unit.rs  song_unit_tag.rs
crates/beadline-core/src/model/: metadata.rs  playback_preferences.rs  song_unit.rs  source.rs  source_collection.rs
crates/beadline-core/tests/: dart_json_compat.rs  hash_dart_compat.rs  property_db_init_idempotence.rs  property_hash_determinism.rs  property_legacy_artist_parsing.proptest-regressions  property_legacy_artist_parsing.rs  property_repository_crud.rs  property_repository_queries.rs  property_song_unit_round_trip.rs  property_thumbnail_find_missing.rs  property_thumbnail_hash_guard.rs  property_thumbnail_idempotence.rs  property_thumbnail_purge_correctness.rs  property_thumbnail_purge_safety.rs  property_thumbnail_round_trip.rs
crates/beadline-tags/: Cargo.toml
crates/beadline-tags/src/: collection_repository.rs  database.rs  entity.rs  error.rs  evaluator.rs  lib.rs  model.rs  parser.rs  repository.rs  suggestion.rs
crates/beadline-tags/src/entity/: tag.rs  tag_alias.rs
crates/beadline-tags/src/model/: collection.rs  query.rs  tag.rs
crates/beadline-tags/tests/: property_collection_crud.rs  property_collection_resolution.rs
crates/ffi_beadline/: Cargo.toml
crates/ffi_beadline/src/: frb_generated.rs  lib.rs
crates/ffi_beadline/src/api/: collection_api.rs  database_api.rs  evaluator_api.rs  media_api.rs  mod.rs  parser_api.rs  simple.rs  song_unit_api.rs  suggestion_api.rs  tag_api.rs  thumbnail_cache_api.rs
crates/ffi_beadline/tests/: property_dart_tag_conversion.rs
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: README.md  main.dart
lib/core/: README.md  cache_manager.dart  error_handler.dart  keyboard_shortcuts.dart  snackbar_helper.dart  undo_manager.dart
lib/data/: .gitkeep  file_system_service.dart  playback_state_storage.dart  search_history_storage.dart  (+1 more)
linux/: CMakeLists.txt
rust_builder/: pubspec.yaml
scripts/: check_brackets.py
wiki/: README.md  README.zh.md  development.md
windows/: CMakeLists.txt
(+219 files in other folders)
