[package]
name = "beadline-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"

[profile.bench]
debug = true