[package]
name = "beadline-tags"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
beadline-core = { path = "../beadline-core" }
rand = "0.9"

[dev-dependencies]
criterion = "0.8.2"
proptest = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.bench]
debug = true
